--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -12,5 +12,5 @@ jobs:
     steps:
       - uses: miermontoto/waka-readme-stats@master
         with:
-          WAKATIME_API_KEY: waka_be8ebeda-7a8e-4ec6-83d9-39c3036fbb54
-          GH_TOKEN: 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
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
