--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,11 +1,11 @@
 name: Latest blog post workflow
 
 on:
-  schedule: # Run workflow automatically
-    - cron: '0 * * * *' # every hour
-  workflow_dispatch: # Run workflow manually
+  workflow_dispatch:
+  schedule:
+    - cron: '0 * * * *'
 permissions:
-  contents: write # To write the generated contents to the readme
+  contents: write
 
 jobs:
   update-readme-with-blog:
@@ -18,3 +18,7 @@ jobs:
         uses: gautamkrishnar/blog-post-workflow@1.8.4
         with:
           feed_list: "https://tanducmai.com/blog/index.xml"
+          template: $newline - $randomEmoji(💯,🔥,💫,🚀,🌮) [$title]($url) - $categories
+          date_format: UTC:mmmm d, yyyy
+          commit_message: Update with the latest blog posts
+          remove_duplicates: true
