--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,9 +1,11 @@
-name: Waka Readme
+name: Waka coding activities
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '15 */12 * * *' # at 00:15 and 12:15 UTC every day
+    - cron: '0 * * * *'
+permissions:
+  contents: write
 
 jobs:
   update-readme:
