--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -3,9 +3,7 @@ name: Waka Stats
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * *" # runs at every 12AM UTC
-permissions:
-  contents: write
+    - cron: "0 */2 * * *" # runs every two hours
 
 jobs:
   update-readme:
@@ -21,4 +19,3 @@ jobs:
           TIME_RANGE: last_30_days
           SHOW_TIME: true
           SHOW_MASKED_TIME: true
-          LANG_COUNT: 10
