--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -3,7 +3,7 @@ name: Latest blog posts
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 * * * *'
+    - cron: "0 12,21 * * *"
 permissions:
   contents: write
 
@@ -13,12 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3.5.2
+        uses: actions/checkout@main
       - name: Pull in tanducmai.com posts
-        uses: gautamkrishnar/blog-post-workflow@1.8.4
+        uses: gautamkrishnar/blog-post-workflow@master
         with:
           feed_list: "https://tanducmai.com/blog/index.xml"
           template: "$newline - $emojiKey(💯,🔥,💫,🚀,🌮) $date - [$title]($url)"
           date_format: "UTC:mmmm d, yyyy"
-          commit_message: "Update with the latest blog posts"
+          commit_message: "Update README with the latest blog posts"
           remove_duplicates: true
