--- a/.github/workflows/update-latest-blogs.yml
+++ b/.github/workflows/update-latest-blogs.yml
@@ -1,20 +1,18 @@
-name: Latest blog posts
+name: Update latest blogs
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 12,21 * * *"
-permissions:
-  contents: write
+    - cron: "0 * * * *"
 
 jobs:
-  update-readme-with-blog:
-    name: Update README with latest blog posts
+  update:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@main
-      - name: Pull in tanducmai.com posts
+        
+      - name: Pull in tanducmai.com blogs
         uses: gautamkrishnar/blog-post-workflow@master
         with:
           feed_list: "https://tanducmai.com/posts/index.xml"
