Update and rename waka-readme.yml to update-waka-stats.yml

--- a/.github/workflows/update-waka-stats.yml
+++ b/.github/workflows/update-waka-stats.yml
@@ -1,20 +1,18 @@
-name: Latest coding stats
+name: Update coding statistics
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0,9,12,18,21 * * *"
+    - cron: "0 * * * *"
 
 jobs:
   update-readme:
-    name: Update README with latest coding stats
     runs-on: ubuntu-latest
     steps:
       - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          COMMIT_MESSAGE: "Update README with the latest coding stats"
-          SHOW_TOTAL: true
-          TIME_RANGE: last_30_days
+          BLOCKS: ->
+          TIME_RANGE: all_time
           SHOW_TIME: true
           SHOW_MASKED_TIME: true
