--- a/.github/workflows/update-StackOverflow-activities.yml
+++ b/.github/workflows/update-StackOverflow-activities.yml
@@ -1,23 +1,24 @@
-name: Latest StackOverflow activities
+name: Update StackOverflow activities
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 12,21 * * *"
+    - cron: "0 * * * *"
+
 permissions:
   contents: write
 
 jobs:
-  update-readme-with-blog:
-    name: Update README with latest activities from StackOverflow
+  update:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@main
+        
       - name: Pull in @tanducmai StackOverflow activities
         uses: gautamkrishnar/blog-post-workflow@master
         with:
           comment_tag_name: "STACKOVERFLOW"
           feed_list: "https://stackoverflow.com/feeds/user/16999206"
           template: "<tr><td>$title</td><td>$url</td></tr>"
-          commit_message: "Update README with the latest StackOverflow activities"
+          commit_message: "Update with the latest StackOverflow activities"
