--- a/.github/workflows/stackoverflow-activities.yml
+++ b/.github/workflows/stackoverflow-activities.yml
@@ -9,7 +9,7 @@ jobs:
   update:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: "📥 Fetching Repository Contents"
         uses: actions/checkout@main
         
       - name: Pull in @tanducmai StackOverflow activities
