--- a/.github/workflows/latest-blogs.yml
+++ b/.github/workflows/latest-blogs.yml
@@ -7,16 +7,19 @@ on:
 
 jobs:
   update:
+    name: Update
     runs-on: ubuntu-latest
     steps:
-      - name: 📥 Fetch Repository Contents
+      - name: 📥 Checkout Repository
         uses: actions/checkout@main
+        with:
+          fetch-depth: 0
         
-      - name: Pull in tanducmai.com blogs
+      - name: ⤵️ Pull in tanducmai.com Blogs
         uses: gautamkrishnar/blog-post-workflow@master
         with:
           feed_list: "https://tanducmai.com/posts/index.xml"
           template: "$newline - $emojiKey(💯,🔥,💫,🚀,🌮) $date - [$title]($url)"
           date_format: "UTC:mmmm d, yyyy"
-          commit_message: "Update README with the latest blog posts"
+          commit_message: "docs(readme): update new blogs"
           remove_duplicates: true
