--- a/.github/workflows/stackoverflow-activities.yml
+++ b/.github/workflows/stackoverflow-activities.yml
@@ -3,7 +3,7 @@ name: 💻 Update StackOverflow activities
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 */6 * * *"
+    - cron: "0 * * * *"
 
 jobs:
   update:
