--- a/.github/workflows/waka-stats.yml
+++ b/.github/workflows/waka-stats.yml
@@ -17,5 +17,7 @@ jobs:
           SHOW_OS: "True"
           SHOW_PROJECTS: "False"
           SHOW_LINES_OF_CODE: "True"
-          SHOW_LOC_CHART: "False"
-          LOCALE: "en"
+          SHOW_LOC_CHART: "True"
+          LOCALE: "en_AU"
+          COMMIT_MESSAGE: "docs(readme): update coding statistics"
+          COMMIT_USERNAME: "github-actions[bot]"
