--- a/.github/workflows/waka-stats.yml
+++ b/.github/workflows/waka-stats.yml
@@ -17,5 +17,6 @@ jobs:
           SHOW_OS: "True"
           SHOW_PROJECTS: "False"
           SHOW_LINES_OF_CODE: "True"
+          SHOW_LOC_CHART: "False"
           COMMIT_MESSAGE: "docs(readme): update coding statistics"
           COMMIT_USERNAME: "github-actions[bot]"
