--- a/package.json
+++ b/package.json
@@ -3,11 +3,35 @@
   "version": "1.0.1",
   "description": "<p align=\"center\"><img src=\"assets/banner.png\" /></p>",
   "main": "index.js",
-  "bin": "./card.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "bin": {
+    "tanducmai": "card.js"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tanducmai/tanducmai.git"
+  },
+  "scripts": {
+    "test": "node card.js",
+    "pub": "npm version major & npm publish"
+  },
+  "dependencies": {
+    "boxen": "^4.2.0",
+    "chalk": "^4.1.0",
+    "clear": "^0.1.0",
+    "cli-spinners": "^2.5.0",
+    "inquirer": "^7.3.2",
+    "open": "^7.0.4",
+    "ora": "^5.1.0",
+    "request": "^2.88.2"
+  },
+  "keywords": [
+    "card",
+    "npm",
+    "npm card",
+    "npx",
+    "npx card",
+    "business card"
+  ],
+  "author": "Tan Duc Mai <henryfromvietnam@gmail.com> (https://tanducmai.com/)",
   "license": "ISC"
 }
